# mandelpain

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  mandelpain.c  shader.glsl
mandelpain/: Cargo.toml
mandelpain/src/: lib.rs
www/: package-lock.json  package.json  vite.config.js
www/src/: main.ts
