[package]
name = "mandelpain"
version = "0.1.0"
authors = ["Hugo Huart <hugo.huart@heig-vd.ch>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

#[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
